--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ section > h1 {
   align-items: center;
   gap: 1rem;
 }
-@media (min-width: 570px){
+@media (min-width: 570px) {
   footer {
     background: #122a40;
     display: flex;
@@ -219,6 +219,52 @@ input {
   stroke-width: 3px;
   width: 25px;
   fill: none;
+}
+
+.table-header {
+  width: 100%;
+  height: 10%;
+  background-color: #120907;
+  padding: 0.8rem 1rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.table-header .input-group {
+  width: 35%;
+  height: 100%;
+  background-color: #122a40;
+  padding: 0 .8rem ;
+  border-radius: 2rem;
+
+  flex: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  transition: 0.2s;
+}
+
+.table-header .input-group:hover {
+  width: 40%;
+  color: white;
+  background-color: black;
+  box-shadow: 0 0.1rem 0.4rem #120907;
+}
+
+.table-header .input-group img {
+  width: 1.2rem;
+  height: 1.2rem;
+}
+
+.table-header .input-group input {
+  width: 100%;
+  padding: 1rem 0.5rem 0 0.3rem;
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
 
 #table-body {
