--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ main {
   padding-top: 90px;
 }
 
+/* #region HEADER */
 #logo {
   height: 60px;
   width: 60px;
@@ -86,6 +87,10 @@ nav li:hover {
   transition: 500ms ease;
 }
 
+/* #endregion HEADER */
+
+
+/* #region Section */
 section {
   scroll-margin-top: 90px;
   padding: 45px 90px;
@@ -122,6 +127,11 @@ section > h1 {
   align-items: center;
   gap: 1rem;
 }
+
+/* #endregion */
+
+
+/* #region Footer */
 @media (min-width: 570px) {
   footer {
     background: #122a40;
@@ -220,7 +230,10 @@ input {
   width: 25px;
   fill: none;
 }
+/* #endregion Footer */
 
+
+/* #region Top Mejores Juegos */
 .table-header {
   width: 100%;
   height: 10%;
@@ -236,7 +249,7 @@ input {
   width: 35%;
   height: 100%;
   background-color: #122a40;
-  padding: 0 .8rem ;
+  padding: 0 0.8rem;
   border-radius: 2rem;
 
   flex: auto;
@@ -286,7 +299,7 @@ input {
 
 #table-body::-webkit-scrollbar-thumb {
   border-radius: 0.5rem;
-  background-color: #145f87;
+  background-color: #122a40;
   visibility: hidden;
 }
 
@@ -299,8 +312,8 @@ table {
 }
 
 td img {
-  width: 36px;
-  height: 36px;
+  width: 60px;
+  height: 60px;
   margin-right: 0.5rem;
   border-radius: 50%;
 
@@ -402,3 +415,10 @@ thead th.active,
 tbody td.active {
   color: #20dbd8;
 }
+
+.star{
+  color: gold;
+  font-size: 1.5rem;
+}
+
+/* #endregion */
