--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ main {
   padding-top: 90px;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 /* #region HEADER */
 #logo {
   height: 60px;
@@ -90,6 +94,37 @@ nav li:hover {
 
 /* #endregion HEADER */
 
+/* #region HOME BANNER */
+.home-banner-container {
+  height: 50%;
+  display: flex;
+  background-color: #120907;
+  border-radius: 50px;
+  box-shadow: 1em 1em 2em #145f87, -1em -1em 2em #145f87, inset 0 0 0 transparent, inset 0 0 0 transparent;
+}
+
+.home-banner{
+  position: relative;
+  overflow: hidden;
+  padding: 20px;
+  margin: 20px;
+  box-shadow: 1em 1em 2em #145f87, -1em -1em 2em #145f87, inset 0 0 0 transparent, inset 0 0 0 transparent;
+  border-radius: 50px;
+  text-align: center;
+}
+
+.home-banner h1{
+  font-size: 50px;
+  margin-bottom: 2rem;
+}
+
+.home-banner p{
+  text-align: center;
+  font-size: larger;
+}
+
+/* #endregion */
+
 /* #region Section */
 section {
   scroll-margin-top: 90px;
@@ -117,258 +152,253 @@ section > h1 {
   height: 100vh;
 }
 
-.home_banner {
-  background-color: #122a40;
-  margin-top: 90px;
-  margin-bottom: 90px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-}
-
 /* #endregion */
 
 /* #region Reseñas */
 .comments-container {
   border-radius: 10px;
   background-color: #122a40;
-	margin: 60px auto 15px;
-	width: 768px;
+  margin: 60px auto 15px;
+  width: 768px;
 }
 
 .comments-container h1 {
   border-radius: 5px;
   background-color: #145f87;
-	font-size: 36px;
-	color: white;
-	font-weight: 400;
+  font-size: 36px;
+  color: white;
+  font-weight: 400;
 }
 
 .comments-container h1 a {
-	font-size: 18px;
-	font-weight: 700;
+  font-size: 18px;
+  font-weight: 700;
 }
 
 .comments-list {
-	margin-top: 30px;
-	position: relative;
+  margin-top: 30px;
+  position: relative;
 }
 
 /**
  * Lineas / Detalles
  -----------------------*/
 .comments-list:before {
-	content: '';
-	width: 2px;
-	height: 100%;
-	background: #c7cacb;
-	position: absolute;
-	left: 32px;
-	top: 0;
+  content: "";
+  width: 2px;
+  height: 100%;
+  background: #c7cacb;
+  position: absolute;
+  left: 32px;
+  top: 0;
 }
 
 .comments-list:after {
-	content: '';
-	position: absolute;
-	background: #c7cacb;
-	bottom: 0;
-	left: 27px;
-	width: 7px;
-	height: 7px;
-	border: 3px solid #dee1e3;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
+  content: "";
+  position: absolute;
+  background: #c7cacb;
+  bottom: 0;
+  left: 27px;
+  width: 7px;
+  height: 7px;
+  border: 3px solid #dee1e3;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
 }
 
-.reply-list:before, .reply-list:after {display: none;}
+.reply-list:before,
+.reply-list:after {
+  display: none;
+}
 .reply-list li:before {
-	content: '';
-	width: 60px;
-	height: 2px;
-	background: #c7cacb;
-	position: absolute;
-	top: 25px;
-	left: -55px;
+  content: "";
+  width: 60px;
+  height: 2px;
+  background: #c7cacb;
+  position: absolute;
+  top: 25px;
+  left: -55px;
 }
-
 
 .comments-list li {
-	margin-bottom: 15px;
-	display: block;
-	position: relative;
+  margin-bottom: 15px;
+  display: block;
+  position: relative;
 }
 
 .comments-list li:after {
-	content: '';
-	display: block;
-	clear: both;
-	height: 0;
-	width: 0;
+  content: "";
+  display: block;
+  clear: both;
+  height: 0;
+  width: 0;
 }
 
 .reply-list {
-	padding-left: 88px;
-	clear: both;
-	margin-top: 15px;
+  padding-left: 88px;
+  clear: both;
+  margin-top: 15px;
 }
 /**
  * Avatar
  ---------------------------*/
 .comments-list .comment-avatar {
-	width: 65px;
-	height: 65px;
-	position: relative;
-	z-index: 99;
-	float: left;
-	border: 3px solid #FFF;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-	box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-	overflow: hidden;
+  width: 65px;
+  height: 65px;
+  position: relative;
+  z-index: 99;
+  float: left;
+  border: 3px solid #fff;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 .comments-list .comment-avatar img {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .reply-list .comment-avatar {
-	width: 50px;
-	height: 50px;
+  width: 50px;
+  height: 50px;
 }
 
 .comment-main-level:after {
-	content: '';
-	width: 0;
-	height: 0;
-	display: block;
-	clear: both;
+  content: "";
+  width: 0;
+  height: 0;
+  display: block;
+  clear: both;
 }
 /**
  * Caja del Comentario
  ---------------------------*/
 .comments-list .comment-box {
-	width: 680px;
-	float: right;
-	position: relative;
-	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
-	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
-	box-shadow: 0 1px 1px rgba(0,0,0,0.15);
+  width: 680px;
+  float: right;
+  position: relative;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
 
-.comments-list .comment-box:before, .comments-list .comment-box:after {
-	content: '';
-	height: 0;
-	width: 0;
-	position: absolute;
-	display: block;
-	border-width: 10px 12px 10px 0;
-	border-style: solid;
-	border-color: transparent #FCFCFC;
-	top: 8px;
-	left: -11px;
+.comments-list .comment-box:before,
+.comments-list .comment-box:after {
+  content: "";
+  height: 0;
+  width: 0;
+  position: absolute;
+  display: block;
+  border-width: 10px 12px 10px 0;
+  border-style: solid;
+  border-color: transparent #fcfcfc;
+  top: 8px;
+  left: -11px;
 }
 
 .comments-list .comment-box:before {
-	border-width: 11px 13px 11px 0;
-	border-color: transparent rgba(0,0,0,0.05);
-	left: -12px;
+  border-width: 11px 13px 11px 0;
+  border-color: transparent rgba(0, 0, 0, 0.05);
+  left: -12px;
 }
 
 .reply-list .comment-box {
-	width: 610px;
+  width: 610px;
 }
 .comment-box .comment-head {
-	background: #FCFCFC;
-	padding: 10px 12px;
-	border-bottom: 1px solid #E5E5E5;
-	overflow: hidden;
-	-webkit-border-radius: 4px 4px 0 0;
-	-moz-border-radius: 4px 4px 0 0;
-	border-radius: 4px 4px 0 0;
+  background: #fcfcfc;
+  padding: 10px 12px;
+  border-bottom: 1px solid #e5e5e5;
+  overflow: hidden;
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
 }
 
 .comment-box .comment-head i {
-	float: right;
-	margin-left: 14px;
-	position: relative;
-	top: 2px;
-	color: #A6A6A6;
-	cursor: pointer;
-	-webkit-transition: color 0.3s ease;
-	-o-transition: color 0.3s ease;
-	transition: color 0.3s ease;
+  float: right;
+  margin-left: 14px;
+  position: relative;
+  top: 2px;
+  color: #a6a6a6;
+  cursor: pointer;
+  -webkit-transition: color 0.3s ease;
+  -o-transition: color 0.3s ease;
+  transition: color 0.3s ease;
 }
 
 .comment-box .comment-head i:hover {
-	color: #03658c;
+  color: #03658c;
 }
 
 .comment-box .comment-name {
-	color: #283035;
-	font-size: 14px;
-	font-weight: 700;
-	float: left;
-	margin-right: 10px;
+  color: #283035;
+  font-size: 14px;
+  font-weight: 700;
+  float: left;
+  margin-right: 10px;
 }
 
 .comment-box .comment-name a {
-	color: #283035;
+  color: #283035;
 }
 
 .comment-box .comment-head span {
-	float: left;
-	color: #999;
-	font-size: 13px;
-	position: relative;
-	top: 1px;
+  float: left;
+  color: #999;
+  font-size: 13px;
+  position: relative;
+  top: 1px;
 }
 
 .comment-box .comment-content {
-	background: #FFF;
-	padding: 12px;
-	font-size: 15px;
-	color: #595959;
-	-webkit-border-radius: 0 0 4px 4px;
-	-moz-border-radius: 0 0 4px 4px;
-	border-radius: 0 0 4px 4px;
+  background: #fff;
+  padding: 12px;
+  font-size: 15px;
+  color: #595959;
+  -webkit-border-radius: 0 0 4px 4px;
+  -moz-border-radius: 0 0 4px 4px;
+  border-radius: 0 0 4px 4px;
 }
 
-.comment-box .comment-name.by-author, .comment-box .comment-name.by-author a {color: #03658c;}
+.comment-box .comment-name.by-author,
+.comment-box .comment-name.by-author a {
+  color: #03658c;
+}
 .comment-box .comment-name.by-author:after {
-	content: 'autor';
-	background: #03658c;
-	color: #FFF;
-	font-size: 12px;
-	padding: 3px 5px;
-	font-weight: 700;
-	margin-left: 10px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
+  content: "autor";
+  background: #03658c;
+  color: #fff;
+  font-size: 12px;
+  padding: 3px 5px;
+  font-weight: 700;
+  margin-left: 10px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
 }
 
 /** =====================
  * Responsive
  ========================*/
 @media only screen and (max-width: 766px) {
-	.comments-container {
-		width: 480px;
-	}
+  .comments-container {
+    width: 480px;
+  }
 
-	.comments-list .comment-box {
-		width: 390px;
-	}
+  .comments-list .comment-box {
+    width: 390px;
+  }
 
-	.reply-list .comment-box {
-		width: 320px;
-	}
+  .reply-list .comment-box {
+    width: 320px;
+  }
 }
 
 /* #endregion */
@@ -559,6 +589,78 @@ tbody td.active {
 .star {
   color: gold;
   font-size: 1.5rem;
+}
+
+/* #endregion */
+
+/* #region Proximos eventos */
+
+li{
+  list-style-type: none;
+}
+
+.card-container{
+  display: flex;
+  padding: 2em;
+  color: white;
+  transition: all 0.4s ease;
+  border-radius: 50px;
+  background-color: #122a40;
+  box-shadow: 1em 1em 2em #145f87, -1em -1em 2em #145f87, inset 0 0 0 transparent, inset 0 0 0 transparent;
+  overflow: hidden;
+}
+
+
+.card {
+  width: 100%;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.card-container img {
+  width: 100%;
+  transition: all 0.4s ease;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 1em 1em 2em #209ed8, -1em -1em 2em #209ed8, inset 0 0 0 transparent, inset 0 0 0 transparent;
+}
+
+.card h3{
+  font-size: 20px;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.card p{
+  margin-bottom: 1rem;
+}
+
+button.btn,
+a.button-link {
+  cursor: pointer;
+  background-color: #145f87;
+  color: white;
+  font-size: 1.25rem;
+  width: 100%;
+  height: 42px;
+  padding: 0 2rem;
+  border: none;
+  border-radius: 21px;
+  transition: color 0.5s;
+}
+
+a.button-link {
+  display: inline;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-align: center;
+}
+
+button.btn:hover,
+a.button-link:hover {
+  background-color: #209ed8;
 }
 
 /* #endregion */
