--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ main {
   padding-top: 90px;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
@@ -70,26 +70,30 @@ nav {
   font-size: 1.25rem;
 }
 
-nav ul {
+.nav-links {
   list-style: none;
   display: flex;
   justify-content: space-between;
 }
 
-nav li {
+.nav-links li {
   padding: 1rem 2rem;
 }
 
-nav a {
+.nav-links a {
   text-decoration: none;
   color: white;
   font-weight: 600;
 }
 
-nav li:hover {
+.nav-links li:hover {
   background-color: #145f87;
   border-radius: 10px;
   transition: 500ms ease;
+}
+
+.hamburguer {
+  display: none;
 }
 
 /* #endregion HEADER */
@@ -100,25 +104,27 @@ nav li:hover {
   display: flex;
   background-color: #120907;
   border-radius: 50px;
-  box-shadow: 1em 1em 2em #145f87, -1em -1em 2em #145f87, inset 0 0 0 transparent, inset 0 0 0 transparent;
+  box-shadow: 1em 1em 2em #145f87, -1em -1em 2em #145f87,
+    inset 0 0 0 transparent, inset 0 0 0 transparent;
 }
 
-.home-banner{
+.home-banner {
   position: relative;
   overflow: hidden;
   padding: 20px;
   margin: 20px;
-  box-shadow: 1em 1em 2em #145f87, -1em -1em 2em #145f87, inset 0 0 0 transparent, inset 0 0 0 transparent;
+  box-shadow: 1em 1em 2em #145f87, -1em -1em 2em #145f87,
+    inset 0 0 0 transparent, inset 0 0 0 transparent;
   border-radius: 50px;
   text-align: center;
 }
 
-.home-banner h1{
+.home-banner h1 {
   font-size: 50px;
   margin-bottom: 2rem;
 }
 
-.home-banner p{
+.home-banner p {
   text-align: center;
   font-size: larger;
 }
@@ -544,12 +550,6 @@ tbody tr.hide td img {
   transition: 0.2s ease-in-out 0.5s;
 }
 
-@media (max-width: 1000px) {
-  td:not(:first-of-type) {
-    min-width: 12.1rem;
-  }
-}
-
 thead th span.icon-arrow {
   display: inline-block;
   width: 1.3rem;
@@ -595,21 +595,21 @@ tbody td.active {
 
 /* #region Proximos eventos */
 
-li{
+li {
   list-style-type: none;
 }
 
-.card-container{
+.card-container {
   display: flex;
   padding: 2em;
   color: white;
   transition: all 0.4s ease;
   border-radius: 50px;
   background-color: #122a40;
-  box-shadow: 1em 1em 2em #145f87, -1em -1em 2em #145f87, inset 0 0 0 transparent, inset 0 0 0 transparent;
+  box-shadow: 1em 1em 2em #145f87, -1em -1em 2em #145f87,
+    inset 0 0 0 transparent, inset 0 0 0 transparent;
   overflow: hidden;
 }
-
 
 .card {
   width: 100%;
@@ -624,16 +624,17 @@ li{
   transition: all 0.4s ease;
   border-radius: 10px;
   background-color: white;
-  box-shadow: 1em 1em 2em #209ed8, -1em -1em 2em #209ed8, inset 0 0 0 transparent, inset 0 0 0 transparent;
+  box-shadow: 1em 1em 2em #209ed8, -1em -1em 2em #209ed8,
+    inset 0 0 0 transparent, inset 0 0 0 transparent;
 }
 
-.card h3{
+.card h3 {
   font-size: 20px;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
 
-.card p{
+.card p {
   margin-bottom: 1rem;
 }
 
@@ -765,3 +766,106 @@ input {
 }
 
 /* #endregion */
+
+@media screen and (max-width: 1024px) {
+  #logo {
+    height: 50px;
+    width: 50px;
+    display: flex;
+  }
+
+  #contacto {
+    height: 50px;
+    width: 70px;
+    display: flex;
+  }
+
+  #contacto:hover {
+    background-color: #145f87;
+    border-radius: 5px;
+    transition: 300ms ease;
+  }
+
+  .nav-links a {
+    font-size: large;
+    text-decoration: none;
+    color: white;
+    font-weight: 600;
+  }
+
+  .home-banner h1 {
+    font-size: 40px;
+    margin-bottom: 1.5rem;
+  }
+
+  .home-banner p {
+    flex-direction: row;
+    text-align: center;
+    font-size: medium;
+  }
+
+  .card-container {
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    color: white;
+    transition: all 0.4s ease;
+    border-radius: 35px;
+  }
+
+  .card h3 {
+    font-size: 15px;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .card p {
+    margin-bottom: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 788px) {
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    top: 90px;
+    left: 0;
+    background-color: #120907;
+    width: 100%;
+    border-radius: 5px;
+  }
+
+  .nav-links.show {
+    display: flex;
+  }
+
+  .hamburguer {
+    display: block;
+    color: white;
+    cursor: pointer;
+  }
+
+  .home-banner h1 {
+    font-size: 35px;
+    margin-bottom: 1rem;
+  }
+
+  .home-banner p {
+    text-align: center;
+    font-size: medium;
+  }
+
+  #table-body {
+    width: 116%;
+    max-height: calc(89% - 1.6rem);
+    background-color: #122a40;
+  
+    margin: 0.8rem -3rem;
+    border-radius: 0.6rem;
+  
+    overflow: auto;
+    overflow: overlay;
+  }
+}
